samples/_failures_safe/1761043619_cc0d1b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8bc329e1.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_8bc329e1.c:165:9: error: expected expression at end of input
  165 |         if (parser->current_token.type ==
      |         ^~
./samples/SAFE/__tmp_8bc329e1.c:165:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8bc329e1.c:165:9: error: expected declaration or statement at end of input
